<resources>
    <string name="app_name">BarterExchange</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Регистрация</string>
    <string name="name">Имя</string>
    <string name="write_name">Укажите имя!</string>
    <string name="surname">Фамилия</string>
    <string name="write_surname">Укажите фамилию!</string>
    <string name="email">Email</string>
    <string name="write_email">Укажите email!</string>
    <string name="phone_number">Номер телефона</string>
    <string name="write_right_phone_num">Введите телефон верного формата(+7хххххххххх или 8хххххххххх)!</string>
    <string name="password">Пароль</string>
    <string name="write_password">Введите пароль!</string>
    <string name="confirn_password">Подтвердите пароль</string>
    <string name="passwords_are_not_same">Пароли не совпадают</string>
    <string name="delete">Удалить</string>
    <string name="ads">Объявления</string>
    <string name="sign_in">Войти</string>
    <string name="no_user">Нет такого пользователя</string>
    <string name="email_for_profile">Email:</string>
    <string name="phone">Телефон:</string>
    <string name="add_item">Добавить товар</string>
    <string name="publish">Опубликовать</string>
    <string name="add_photo">Добавить фото</string>
    <string name="loading">Загрузка...</string>
    <string name="name_of_ad">Название</string>
    <string name="desc">Описание</string>
    <string name="city">Город</string>
    <string name="write_city">Укажите город</string>
    <string name="city_for_profile">Город:</string>
    <string name="photo_is_loaded">Фото загружено</string>
    <string name="exit">Выйти</string>
</resources>
